<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="48dp">

    <ImageView
        android:contentDescription="@string/image_desc"
        android:id="@+id/petImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/happy_pet" />

    <TextView
        android:id="@+id/hungerStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hunger_50" />

    <Button
        android:id="@+id/feedButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:text="@string/feed" />

    <TextView
        android:id="@+id/happinessStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/happiness_50"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:layout_marginTop="10dp" />
</LinearLayout>
